# gtfs_segments

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  _config.yml  geom_utils.py  gtfs_segment.py  gtfs_segments.py  mkdocs.yml  mobility.py  partridge_func.py  pyproject.toml  requirements.txt  setup.py  state_abbreviations.json  tox.ini  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: draft-pdf.yml  python-package.yml  python-publish.yml
docs/: CONTRIBUTING.md  geom_utils.md  gtfs_segments.md  index.md  installation.md  license.md  mobility.md  partridge_func.md  requirements.txt  requirements_docs.txt  route_stats.md  usage.md  utils.md
docs/tutorials/: SFMTA.ipynb
gtfs_segments/: __init__.py  elevations.py  geom_utils.py  gtfs_segments.py  mobility.py  partridge_func.py  route_stats.py  utils.py
gtfs_segments/partridge_mod/: __init__.py  __version__.py  geo.py  gtfs.py  parsers.py  readers.py  utilities.py
paper/: .gitignore  comparison_table.tex  heatmap_and_histogram.tex  paper.bib  paper.md
test/: __init__.py  test_basic.py  test_gtfs_segments.py  test_mobility.py  test_partridge.py  test_route_stats.py  test_utils.py
