[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'gtfs_segments'
description = "GTFS Segments: A fast and efficient library to generate bus stop spacings"
# Support Python 3.9+.
requires-python = ">=3.9"
version = "2.1.7"
dependencies = [
    "geopandas",
    "scipy",
    "shapely",
    "numpy",
    "pandas",
    "matplotlib",
    "utm",
    "contextily",
    "requests",
    "isoweek",
    "faust-cchardet",
    "charset_normalizer",
    "folium",
    "thefuzz",
]
authors = [
    {name = "Saipraneeth Devunuri", email = "sd37@illinois.edu"},
    {name = "Lewis Lehe", email = "lehe@illinois.edu"},
]
maintainers = [
    {name = "Saipraneeth Devunuri", email = "sd37@illinois.edu"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE", name = "MIT License"}
keywords=["Python", "GTFS", "Transit", "Stop Spacings", "GIS"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
]

[tool.setuptools]
packages = ["gtfs_segments","gtfs_segments.partridge_mod"]

[project.urls]
Homepage = "https://github.com/UTEL-UIUC/gtfs_segments"
Documentation = "https://gtfs-segments.readthedocs.io"
Repository = "https://github.com/UTEL-UIUC/gtfs_segments"
"Bug Tracker" = "https://github.com/UTEL-UIUC/gtfs_segments/issues"

[tool.ruff]
src = ["gtfs_segments"]
# Set the maximum line length to 100.
line-length = 100
indent-width = 4

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.lint]
exclude = ["*.ipynb"]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203","E501"]
extend-select = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
exclude = ["*.ipynb"]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py{39,310,311}
    minversion = 4.11.3

    [gh-actions]
    python =
        3.9: py39
        3.10: py310
        3.11: py311

    [testenv]
    description = run the tests with unittest
    deps = -rrequirements.txt
    commands =
        python -m unittest

    [testenv:lint]
    description = run linters
    skip_install = true
    deps = flake8==6.1.0
    commands = 
        # stop the build if there are Python syntax errors or undefined names
        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
"""

[tool.mypy]
disallow_untyped_defs = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "gtfs_segments.*"
ignore_missing_imports = true
